# LinguistaAPI

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile_render  README.md  bash.exe.stackdump  build.sh  data_dump.json  data_dump2.json  dump.json  example.env  nginx.conf  pyproject.toml  render.yaml  requirements.txt  setup.cfg
.github/workflows/: main.yml
Linguista/: manage.py
Linguista/Linguista/: settings.py  wsgi.py
README/: deploy.md  runserver_local.md  structure.md
api/: filters.py  serializers.py  urls.py  views.py
backend/: manage.py  requirements.txt
backend/api/: serializers.py  urls.py  views.py
backend/core/: models.py
backend/linguista/: settings.py  urls.py
backend/words/: admin.py  models.py
config/: asgi.py  settings.py  urls.py  wsgi.py
config/components/: cors.py  databases.py  email_backend.py  installed_apps.py  logging.py  middleware.py  modeltranslation.py  rest_auth.py  rest_framework.py  spectacular.py
config/middleware/: request_log.py
core/: apps.py  constants.py  exceptions.py  mixins.py  models.py  schema.py  serializers_fields.py  serializers_mixins.py  signals.py  utils.py
exercises/: admin.py  apps.py  constants.py  models.py  serializers.py  urls.py  views.py
exercises/migrations/: 0001_initial.py  0002_alter_exercise_options_and_more.py  0002_favoriteexercise_user.py  0002_initial.py  0002_wordset_wordsupdatehistory_and_more.py  0003_alter_exercise_options_and_more.py  0003_alter_wordsupdatehistory_options_and_more.py  0003_translatorhistorydetails_task_translation_and_more.py  0004_alter_translatorhistorydetails_options_and_more.py  0004_remove_translatoruserdefaultsettings_unique_user_translator_settings_and_more.py  0005_alter_translatorhistorydetails_answer_time.py  0005_alter_translatoruserdefaultsettings_user.py  0006_alter_translatorhistorydetails_suggested_options.py  0006_alter_translatoruserdefaultsettings_options_and_more.py  0007_exercisehistorydetails_and_more.py  0007_usersexerciseshistory_complete_time.py  0008_alter_exercisehistorydetails_options_and_more.py  0008_translatorhistorydetails_text_task.py  0009_alter_exercise_table_comment_and_more.py  0009_translatorhistorydetails_language.py  0010_alter_exercisehistorydetails_task_translation_and_more.py  0010_rename_word_translatorhistorydetails_task_word_and_more.py  0011_alter_exercisehistorydetails_options_and_more.py  0011_usersexerciseshistory_hints_available.py  0012_alter_translatoruserdefaultsettings_repetitions_amount.py  0013_alter_translatoruserdefaultsettings_mode_and_more.py  0014_alter_hint_code.py
infra/: docker-compose-backend.yml  docker-compose-dev.yml  docker-compose-images.yml  docker-compose-prod.yml  docker-compose.yml  nginx.conf
infra/nginx/: Dockerfile
languages/: admin.py  apps.py  models.py  serializers.py  translation.py  views.py
languages/migrations/: 0001_initial.py  0002_alter_language_isocode.py  0002_alter_language_options_alter_language_isocode_and_more.py  0002_initial.py  0002_userlanguage_user.py  0003_alter_language_options_alter_language_isocode_and_more.py  0003_alter_language_table_comment_and_more.py  0004_alter_language_interface_available_and_more.py  0005_alter_languageimage_table_comment.py  0006_alter_language_sorting.py  0007_alter_languageimage_options_alter_language_flag_icon_and_more.py  0008_alter_languageimage_image.py  0009_alter_languageimage_options.py  0010_language_name_en_language_name_ru.py  0011_alter_languageimage_image.py
linguista/: data_dump.json  requirements.txt  settings.py  urls.py  wsgi.py
linguista/config/: settings.py  urls.py
linguista/core/: admin.py  apps.py  constants.py  models.py  pagination.py
linguista/exercises/: admin.py  models.py  views.py
linguista/languages/: admin.py  models.py
linguista/linguista/: asgi.py  settings.py  urls.py  wsgi.py
linguista/tests/: conftest.py  factories.py  test_words.py
linguista/users/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
linguista/vocabulary/: admin.py  apps.py  filters.py  forms.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
linguista/words/: admin.py  models.py  urls.py  views.py
linguista_bot/: constants.py  handlers.py  keyboards.py  main.py  watcher.sh
linguista_bot/database/: db_create.py  sqlite.ddl  sqlite3.db  utils.py
linguista_bot/handlers/: __init__.py  auth_handlers.py  common_handlers.py  constants.py  profile_handlers.py  registration_handlers.py  vocabulary_handlers.py
linguista_bot/keyboards/: keyboards.py
linguista_bot/states/: languages_states.py  states.py  vocabulary_states.py
src/: .dockerignore  Dockerfile  Dockerfile_render  example.env  example_prod.env  iso.cs  test_data.json
src/config/: asgi.py  settings.py  urls.py
src/utils/: checkers.py  fillers.py  generators.py  getters.py  images.py
staticfiles/: staticfiles.json
tests/: conftest.py  factories.py  test_words.py
tests/fixtures/: fixture_user.py
tests/test_core/: test_utils.py
tests/test_exercises/: conftest.py  e2e_tests.py
tests/test_vocabulary/: conftest.py  e2e_tests.py  test_signals.py
users/: admin.py  apps.py  constants.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_gender_and_more.py  0002_remove_user_slug.py  0003_alter_user_email.py  0003_alter_user_table_comment_and_more.py  0004_alter_user_options.py  0004_alter_user_options_alter_user_gender_and_more.py  0005_alter_user_email.py  0006_alter_userdefaultwordsview_options_and_more.py  0007_alter_userdefaultwordsview_options_alter_user_email_and_more.py  0008_alter_userlearninglanguage_cover.py  0009_alter_user_image.py
vocabulary/: admin.py  apps.py  constants.py  exceptions.py  filters.py  mixins.py  models.py  permissions.py  schema.py  serializers.py  serializers_fields.py  serializers_mixins.py  translation.py  urls.py  utils.py  views.py
vocabulary/migrations/: 0001_initial.py  0009_note_author.py  (+35 more)
words/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
(+167 files in other folders)
