[tool.poetry]
name = "linguista"
version = "0.1.0"
description = ""
authors = ["Marek Kaput <marek.kaput@swmansion.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.9.6"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}
gunicorn = "^20.1.0"
django-filter = "^23.2"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
dj-rest-auth = "^4.0.1"
django-allauth = "^0.54.0"
django-cors-headers = "^4.2.0"
drf-spectacular = "^0.26.3"
python-dotenv = "^1.0.0"
Pillow = "^10.0.0"
django-modeltranslation = "^0.18.11"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-django = "^4.4.0"
pytest-pythonpath = "^0.7.3"
factory-boy = "^3.3.0"
django-cleanup = "^8.0.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"